Fix font render issue on Firefox

--- a/src/scss/section/_global.scss
+++ b/src/scss/section/_global.scss
@@ -67,6 +67,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 	text-rendering: optimizeLegibility;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 img {
